--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 
 spring.jpa.hibernate.ddl-auto=create
+
+spring.data.web.pageable.page-parameter=0
+spring.data.web.pageable.default-page-size=2
 #no crear ninguna tabla, solo validar;
 #spring.jpa.hibernate.ddl-auto=validate
 #Crear la tabla de nuevo
